# BiasVAN1dIsing

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_n16_sweep.py  run_production.py
docs/: dimensionless_variables.md  exact_solutions.md  figures.md  results_format.md  running_sweeps.md
experiments/: config.py  finite_size.py  h0_inference.py  h0_train.py  merge_chunks.py  n2_exact.py  obs_inference.py  obs_train.py  rerun_failed.py  run_all.py  sweep_TH.py  sweep_inference.py
figures/: generate_N32_figures.py  plot_H0_slice.py  plot_analytical_finite_size.py  plot_analytical_h0.py  plot_analytical_heatmaps.py  plot_analytical_observables.py  plot_bias_ablation_heatmap.py  plot_convergence.py  plot_delta_F_heatmap.py  plot_exact_phase_diagram.py  plot_finite_size.py  plot_h0_comparison.py  plot_h0_comparison_logT.py  plot_magnetization.py  plot_n2_verification.py  plot_observable_comparison.py  plot_parameters.py  plot_scaling_collapse.py  style.py
scripts/: launch_multi_gpu.sh  launch_rerun.sh  setup_unicorn.sh  verify_gpu.py
src/exact/: __init__.py  analytical_formulas.py  transfer_matrix.py
src/nmf/: __init__.py  mean_field.py
src/van/: __init__.py  energy.py  model.py  observables.py  train.py  utils.py
tests/: test_analytical_vs_sympy.py  test_energy.py  test_nmf_consistency.py  test_observables.py  test_training.py  test_transfer_matrix.py  test_van_model.py  test_van_n2.py
